fixed carousel width and made sample covers smaller

--- a/css/caroufredsel.css
+++ b/css/caroufredsel.css
@@ -1,10 +1,9 @@
 .image_carousel {
-	position: absolute;
+	position: fixed;
 	float: right;
-	width: 15%;
-	right: 0;
-	top : 0;
-	padding: 0 15px 0 15px;
+	right: 15px;
+	top : 60px;
+	width: 15%
 	z-index: 500;
 }
 
